--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">201916053_강민찬</string>
+    <string name="affirmation1">"Don’t watch the clock; do what it does. Keep going." - Sam Levenson</string>
+    <string name="affirmation2">"The only limit to our realization of tomorrow will be our doubts of today." - Franklin D. Roosevelt</string>
+    <string name="affirmation3">"Success is not the key to happiness. Happiness is the key to success. If you love what you are doing, you will be successful." - Albert Schweitzer</string>
+    <string name="affirmation4">"Your time is limited, don't waste it living someone else's life." - Steve Jobs</string>
+    <string name="affirmation5">"Life is 10% what happens to us and 90% how we react to it." - Charles R. Swindoll</string>
+    <string name="affirmation6">"The best way to predict the future is to create it." - Peter Drucker</string>
+    <string name="affirmation7">"Do not wait for leaders; do it alone, person to person." - Mother Teresa</string>
+    <string name="affirmation8">"The only person you are destined to become is the person you decide to be." - Ralph Waldo Emerson</string>
+    <string name="affirmation9">"Believe you can and you're halfway there." - Theodore Roosevelt</string>
+    <string name="affirmation10">"In three words I can sum up everything I've learned about life: it goes on." - Robert Frost</string>
 </resources>
